--- a/style.css
+++ b/style.css
@@ -1,10 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #000;
+    background-color: #fff;
+}
+
+.input-text {
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.5;
     background-color: #fff;
     color: #000;
 }
 
-@media screen and (prefers-color-scheme: dark){
+textarea::-webkit-scrollbar {
+    border-radius: 10px;
+    width: 12px;
+    background-color: #444444;
+}
+
+textarea::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: rgb(53, 53, 53);
+}
+
+@media screen and (prefers-color-scheme: dark) {
     body {
+        background-color: #1f1f1f;
+        color: #fff;
+    }
+
+    .input-text {
         background-color: #1f1f1f;
         color: #fff;
     }
