--- a/style.css
+++ b/style.css
@@ -19,17 +19,37 @@ body {
 textarea::-webkit-scrollbar {
     border-radius: 10px;
     width: 12px;
-    background-color: #444444;
+    background-color: #c0c0c0;
 }
 
 textarea::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: rgb(53, 53, 53);
+    background-color: rgb(146, 146, 146);
 }
 
 .title-header{
     text-align: center;
+}
+
+.desc-header{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 18px;
+}
+
+.code-box {
+    color: #fff;
+    background-color: #3f3f3f;
+    border: 0px solid;
+    border-radius: 4px;
+    padding: 4px 16px;
+    font-family: monospace;
+    white-space: pre-wrap;
+    overflow-x: auto;
+    display: inline-block;
 }
 
 .container{
@@ -48,5 +68,19 @@ textarea::-webkit-scrollbar-thumb {
     .input-text {
         background-color: #1f1f1f;
         color: #fff;
+    }
+
+    textarea::-webkit-scrollbar {
+        background-color: #444444;
+    }
+    
+    textarea::-webkit-scrollbar-thumb {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        background-color: rgb(53, 53, 53);
+    }
+
+    .code-box{
+        color: #000;
+        background-color: #3f3f3f;
     }
 }
