--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ textarea::-webkit-scrollbar-thumb {
     }
 
     .code-box{
-        color: #000;
+        color: #fff;
         background-color: #3f3f3f;
     }
 }
