--- a/style.css
+++ b/style.css
@@ -28,11 +28,11 @@ textarea::-webkit-scrollbar-thumb {
     background-color: rgb(146, 146, 146);
 }
 
-.title-header{
+.title-header {
     text-align: center;
 }
 
-.desc-header{
+.desc-header {
     text-align: center;
     display: flex;
     justify-content: center;
@@ -52,11 +52,31 @@ textarea::-webkit-scrollbar-thumb {
     display: inline-block;
 }
 
-.container{
+.container {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
     /* padding: 0 15px; */
+}
+
+.option-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 18px auto;
+    max-width: 1200px;
+}
+
+.option-box .option-item {
+    margin: 0 8px;
+    background-color: #3f3f3f;
+    border-radius: 4px;
+    padding: 12px 16px;
+    width: 100%;
+}
+
+.option-box .option-item:hover {
+    background-color: #5f5f5f;
 }
 
 @media screen and (prefers-color-scheme: dark) {
@@ -73,13 +93,13 @@ textarea::-webkit-scrollbar-thumb {
     textarea::-webkit-scrollbar {
         background-color: #444444;
     }
-    
+
     textarea::-webkit-scrollbar-thumb {
         -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
         background-color: rgb(53, 53, 53);
     }
 
-    .code-box{
+    .code-box {
         color: #fff;
         background-color: #3f3f3f;
     }
